--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="chapter1\basic.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
