--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="chapter1\GLShader.cpp" />
     <ClCompile Include="chapter1\Glslprogram.cpp" />
+    <ClCompile Include="chapter2\ADSScene.cpp" />
     <ClCompile Include="chapter2\glslprogram.cpp" />
     <ClCompile Include="chapter2\scene.cpp" />
     <ClCompile Include="chapter2\vbotorus.cpp" />
@@ -157,12 +158,15 @@
   <ItemGroup>
     <None Include="chapter1\basic.frag" />
     <None Include="chapter1\basic.vert" />
+    <None Include="chapter2\Shader\ADSShader.frag" />
+    <None Include="chapter2\Shader\ADSShader.vert" />
     <None Include="chapter2\Shader\DiffuseShader.frag" />
     <None Include="chapter2\Shader\DiffuseShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
     <ClInclude Include="chapter1\Glslprogram.h" />
+    <ClInclude Include="chapter2\ADSScene.h" />
     <ClInclude Include="chapter2\defines.h" />
     <ClInclude Include="chapter2\Drawable.h" />
     <ClInclude Include="chapter2\glslprogram.h" />
