シェーダーで関数を使う

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -162,6 +162,8 @@
     <None Include="chapter2\Shader\ADSShader.vert" />
     <None Include="chapter2\Shader\DiffuseShader.frag" />
     <None Include="chapter2\Shader\DiffuseShader.vert" />
+    <None Include="chapter2\Shader\FunctionADSShader.frag" />
+    <None Include="chapter2\Shader\FunctionADSShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
