--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="chapter2\FlatScene.cpp">
       <Filter>ソース ファイル\chapter2</Filter>
     </ClCompile>
+    <ClCompile Include="chapter2\SceneSubRoutine.cpp">
+      <Filter>ソース ファイル\chapter2</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="chapter1\basic.vert">
@@ -92,6 +95,12 @@
     <None Include="chapter2\Shader\FlatShader.frag">
       <Filter>ソース ファイル\chapter2\Shader</Filter>
     </None>
+    <None Include="chapter2\Shader\SubRoutineShader.vert">
+      <Filter>ソース ファイル\chapter2\Shader</Filter>
+    </None>
+    <None Include="chapter2\Shader\SubRoutineShader.frag">
+      <Filter>ソース ファイル\chapter2\Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp">
@@ -128,6 +137,9 @@
       <Filter>ソース ファイル\chapter2</Filter>
     </ClInclude>
     <ClInclude Include="chapter2\FlatScene.h">
+      <Filter>ソース ファイル\chapter2</Filter>
+    </ClInclude>
+    <ClInclude Include="chapter2\SceneSubRoutine.h">
       <Filter>ソース ファイル\chapter2</Filter>
     </ClInclude>
   </ItemGroup>
