--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="chapter2\SceneTwoSide.cpp" />
     <ClCompile Include="chapter2\teaPot.cpp" />
     <ClCompile Include="chapter2\vbotorus.cpp" />
+    <ClCompile Include="chapter3\directionalLight\SceneDirectionalLight.cpp" />
     <ClCompile Include="chapter3\Mesh\VBOPlane.cpp" />
     <ClCompile Include="chapter3\multiLight\SceneMultiLight.cpp" />
     <ClCompile Include="OpenGL.cpp" />
@@ -179,6 +180,8 @@
     <None Include="chapter2\Shader\SubRoutineShader.vert" />
     <None Include="chapter2\Shader\TwoSideShader.frag" />
     <None Include="chapter2\Shader\TwoSideShader.vert" />
+    <None Include="chapter3\directionalLight\Shader\DirectionalLightShader.frag" />
+    <None Include="chapter3\directionalLight\Shader\DirectionalLightShader.vert" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.frag" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.vert" />
   </ItemGroup>
@@ -197,6 +200,7 @@
     <ClInclude Include="chapter2\teaPot.h" />
     <ClInclude Include="chapter2\teapotdata.h" />
     <ClInclude Include="chapter2\vbotorus.h" />
+    <ClInclude Include="chapter3\directionalLight\SceneDirectionalLight.h" />
     <ClInclude Include="chapter3\Mesh\VBOPlane.h" />
     <ClInclude Include="chapter3\multiLight\SceneMultiLight.h" />
   </ItemGroup>
