--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="chapter3\directionalLight\SceneDirectionalLight.cpp" />
     <ClCompile Include="chapter3\Mesh\VBOPlane.cpp" />
     <ClCompile Include="chapter3\multiLight\SceneMultiLight.cpp" />
+    <ClCompile Include="chapter3\PerFragment\ScenePerFragment.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +185,8 @@
     <None Include="chapter3\directionalLight\Shader\DirectionalLightShader.vert" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.frag" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.vert" />
+    <None Include="chapter3\PerFragment\Shader\PerFragmentShader.frag" />
+    <None Include="chapter3\PerFragment\Shader\PerFragmentShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -203,6 +206,7 @@
     <ClInclude Include="chapter3\directionalLight\SceneDirectionalLight.h" />
     <ClInclude Include="chapter3\Mesh\VBOPlane.h" />
     <ClInclude Include="chapter3\multiLight\SceneMultiLight.h" />
+    <ClInclude Include="chapter3\PerFragment\ScenePerFragment.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
