スポットライトをシュミレーションする

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="chapter3\Mesh\VBOPlane.cpp" />
     <ClCompile Include="chapter3\multiLight\SceneMultiLight.cpp" />
     <ClCompile Include="chapter3\PerFragment\ScenePerFragment.cpp" />
+    <ClCompile Include="chapter3\SpotLight\SceneSpotLight.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -187,6 +188,8 @@
     <None Include="chapter3\multiLight\Shader\MultiLightShader.vert" />
     <None Include="chapter3\PerFragment\Shader\PerFragmentShader.frag" />
     <None Include="chapter3\PerFragment\Shader\PerFragmentShader.vert" />
+    <None Include="chapter3\SpotLight\Shader\SpotLightShader.frag" />
+    <None Include="chapter3\SpotLight\Shader\SpotLightShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -207,6 +210,7 @@
     <ClInclude Include="chapter3\Mesh\VBOPlane.h" />
     <ClInclude Include="chapter3\multiLight\SceneMultiLight.h" />
     <ClInclude Include="chapter3\PerFragment\ScenePerFragment.h" />
+    <ClInclude Include="chapter3\SpotLight\SceneSpotLight.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
