--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="chapter2\teaPot.cpp" />
     <ClCompile Include="chapter2\vbotorus.cpp" />
     <ClCompile Include="chapter3\directionalLight\SceneDirectionalLight.cpp" />
+    <ClCompile Include="chapter3\Fog\SceneFog.cpp" />
     <ClCompile Include="chapter3\Mesh\VBOPlane.cpp" />
     <ClCompile Include="chapter3\multiLight\SceneMultiLight.cpp" />
     <ClCompile Include="chapter3\PerFragment\ScenePerFragment.cpp" />
@@ -185,6 +186,8 @@
     <None Include="chapter2\Shader\TwoSideShader.vert" />
     <None Include="chapter3\directionalLight\Shader\DirectionalLightShader.frag" />
     <None Include="chapter3\directionalLight\Shader\DirectionalLightShader.vert" />
+    <None Include="chapter3\Fog\Shader\FogShader.frag" />
+    <None Include="chapter3\Fog\Shader\FogShader.vert" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.frag" />
     <None Include="chapter3\multiLight\Shader\MultiLightShader.vert" />
     <None Include="chapter3\PerFragment\Shader\PerFragmentShader.frag" />
@@ -210,6 +213,7 @@
     <ClInclude Include="chapter2\teapotdata.h" />
     <ClInclude Include="chapter2\vbotorus.h" />
     <ClInclude Include="chapter3\directionalLight\SceneDirectionalLight.h" />
+    <ClInclude Include="chapter3\Fog\SceneFog.h" />
     <ClInclude Include="chapter3\Mesh\VBOPlane.h" />
     <ClInclude Include="chapter3\multiLight\SceneMultiLight.h" />
     <ClInclude Include="chapter3\PerFragment\ScenePerFragment.h" />
