--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -72,16 +72,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\jpegsr9e;$(SolutionDir)venders\glew-2.1.0\include;$(SolutionDir)venders\glfw\include;$(SolutionDir)venders\glm\;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64\;$(SolutionDir)venders\glfw\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -96,8 +96,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -126,8 +126,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\jpegsr9e\Release\x64;$(SolutionDir)venders\glew-2.1.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glew32s.lib;glfw3.lib;jpeg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -165,6 +165,9 @@
     <ClCompile Include="chapter3\PerFragment\ScenePerFragment.cpp" />
     <ClCompile Include="chapter3\SpotLight\SceneSpotLight.cpp" />
     <ClCompile Include="chapter3\Toon\SceneToon.cpp" />
+    <ClCompile Include="chapter4\loadImage.cpp" />
+    <ClCompile Include="chapter4\Mesh\VBOCube.cpp" />
+    <ClCompile Include="chapter4\UseTexture\SceneTexture.cpp" />
     <ClCompile Include="OpenGL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -196,6 +199,8 @@
     <None Include="chapter3\SpotLight\Shader\SpotLightShader.vert" />
     <None Include="chapter3\Toon\Shader\ToonShader.frag" />
     <None Include="chapter3\Toon\Shader\ToonShader.vert" />
+    <None Include="chapter4\UseTexture\Shader\TextureShader.frag" />
+    <None Include="chapter4\UseTexture\Shader\TextureShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -219,6 +224,17 @@
     <ClInclude Include="chapter3\PerFragment\ScenePerFragment.h" />
     <ClInclude Include="chapter3\SpotLight\SceneSpotLight.h" />
     <ClInclude Include="chapter3\Toon\SceneToon.h" />
+    <ClInclude Include="chapter4\loadImage.h" />
+    <ClInclude Include="chapter4\Mesh\VBOCube.h" />
+    <ClInclude Include="chapter4\UseTexture\SceneTexture.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="chapter4\Texture\brick1.jpg" />
+    <Image Include="chapter4\Texture\cement.jpg" />
+    <Image Include="chapter4\Texture\flower.png" />
+    <Image Include="chapter4\Texture\moss.png" />
+    <Image Include="chapter4\Texture\ogre_diffuse.png" />
+    <Image Include="chapter4\Texture\ogre_normalmap.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
